--- a/apps/ddclient/external-secret.yml
+++ b/apps/ddclient/external-secret.yml
@@ -6,7 +6,7 @@ metadata:
 spec:
   refreshInterval: 1h
   secretStoreRef:
-    name: vault-backend
+    name: vault-backend-ddclient
     kind: ClusterSecretStore
   target:
     name: ddclient-secrets
