--- a/apps/netbox/overlays/prod/kustomization.yml
+++ b/apps/netbox/overlays/prod/kustomization.yml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - ../../base
+  - cluster-secret-store.yml
   - ingress-route.yml
   - external-secrets.yml
   - external-secrets-repo.yml
