--- a/apps/netbox/overlays/prod/cluster-secret-store.yml
+++ b/apps/netbox/overlays/prod/cluster-secret-store.yml
@@ -1,4 +1,4 @@
-apiVersion: external-secrets.io/v1beta1
+apiVersion: external-secrets.io/v1
 kind: ClusterSecretStore
 metadata:
   name: vault-backend-netbox
@@ -6,7 +6,7 @@ metadata:
 spec:
   provider:
     vault:
-      server: "http://hashi-vault-lab-0.hashi-vault-lab-internal.hashi-vault-lab.svc.lab-cluster.jjland.local:8200"
+      server: "server: "http://hashi-vault-prod-0.hashi-vault-prod-internal.hashi-vault-prod.svc.cluster.local:8200"
       path: "secret"
       # Version is the Vault KV secret engine version.
       # This can be either "v1" or "v2", defaults to "v2"
