--- a/apps/netbox/overlays/prod/external-secrets.yml
+++ b/apps/netbox/overlays/prod/external-secrets.yml
@@ -1,7 +1,7 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: netbox-dev-secrets
+  name: netbox-prod-secrets
   namespace: netbox-prod
 spec:
   refreshInterval: "1h" # Refresh every hour
