--- a/apps/netbox/overlays/prod/cluster-secret-store.yml
+++ b/apps/netbox/overlays/prod/cluster-secret-store.yml
@@ -6,7 +6,7 @@ metadata:
 spec:
   provider:
     vault:
-      server: "server: "http://hashi-vault-prod-0.hashi-vault-prod-internal.hashi-vault-prod.svc.cluster.local:8200"
+      server: "http://hashi-vault-prod-0.hashi-vault-prod-internal.hashi-vault-prod.svc.cluster.local:8200"
       path: "secret"
       # Version is the Vault KV secret engine version.
       # This can be either "v1" or "v2", defaults to "v2"
