--- a/apps/netbox/overlays/prod/cluster-secret-store.yml
+++ b/apps/netbox/overlays/prod/cluster-secret-store.yml
@@ -1,7 +1,7 @@
 apiVersion: external-secrets.io/v1
 kind: ClusterSecretStore
 metadata:
-  name: vault-backend-netbox
+  name: vault-backend-netbox-prod
   namespace: netbox-prod
 spec:
   provider:
