--- a/apps/netbox/overlays/prod/external-secrets.yml
+++ b/apps/netbox/overlays/prod/external-secrets.yml
@@ -22,10 +22,10 @@ spec:
         key: secret/data/netbox-prod-credentials
         property: postgres-pass
 
-    - secretKey: redis-password      # Key for Redis password
+    - secretKey: valkey-password      # Key for Redis password
       remoteRef:
         key: secret/data/netbox-prod-credentials
-        property: redis-pass
+        property: valkey-pass
 
     - secretKey: dockerusername
       remoteRef:
