--- a/apps/netbox/overlays/prod/external-secrets.yml
+++ b/apps/netbox/overlays/prod/external-secrets.yml
@@ -29,10 +29,10 @@ spec:
 
     - secretKey: dockerusername
       remoteRef:
-        key: secret/data/net-automation-repo-credentials
-        property: dockerusername
+        key: secret/data/my-github
+        property: username
     
     - secretKey: dockerpassword
       remoteRef:
-        key: secret/data/net-automation-repo-credentials
-        property: dockerpassword
+        key: secret/data/my-github
+        property: pat
