--- a/apps/netbox/overlays/prod/external-secrets-repo.yml
+++ b/apps/netbox/overlays/prod/external-secrets-repo.yml
@@ -27,17 +27,17 @@ spec:
   data:
     - secretKey: dockerusername
       remoteRef:
-        key: secret/net-automation-repo-credentials
-        property: dockerusername
+        key: secret/my-github
+        property: username
     - secretKey: dockerpassword
       remoteRef:
-        key: secret/net-automation-repo-credentials
-        property: dockerpassword
+        key: secret/my-github
+        property: pat
     - secretKey: dockeremail
       remoteRef:
-        key: secret/net-automation-repo-credentials
-        property: dockeremail
+        key: secret/my-github
+        property: email
     - secretKey: dockerserver
       remoteRef:
-        key: secret/net-automation-repo-credentials
-        property: dockerserver
+        key: secret/my-github
+        property: server
