--- a/apps/netbox/overlays/prod/netbox-branching-cm.yml
+++ b/apps/netbox/overlays/prod/netbox-branching-cm.yml
@@ -5,14 +5,19 @@ metadata:
 data:
   local_settings.py: |
     from netbox_branching.utilities import DynamicSchemaDict
-    from .configuration import DATABASE
 
-    # Wrap DATABASES with DynamicSchemaDict for dynamic schema support
     DATABASES = DynamicSchemaDict({
-        'default': DATABASE,
+        'default': {
+            'ENGINE': 'django.db.backends.postgresql',
+            'NAME': 'netbox',               # Database name
+            'USER': 'netbox',               # PostgreSQL username
+            'PASSWORD': 'password',         # PostgreSQL password
+            'HOST': 'localhost',            # Database server
+            'PORT': '',                     # Database port (leave blank for default)
+            'CONN_MAX_AGE': 300,            # Max database connection age
+        }
     })
-
-    # Employ our custom database router
+    
     DATABASE_ROUTERS = [
         'netbox_branching.database.BranchAwareRouter',
     ]
