--- a/apps/netbox/overlays/prod/netbox-branching-cm.yml
+++ b/apps/netbox/overlays/prod/netbox-branching-cm.yml
@@ -11,8 +11,8 @@ data:
             'ENGINE': 'django.db.backends.postgresql',
             'NAME': 'netbox',               # Database name
             'USER': 'netbox',               # PostgreSQL username
-            'PASSWORD': 'password',         # PostgreSQL password
-            'HOST': 'localhost',            # Database server
+            'PASSWORD': 'postgres123',         # PostgreSQL password
+            'HOST': 'netbox-prod-postgresql.netbox-prod.svc.cluster.local',            # Database server
             'PORT': '',                     # Database port (leave blank for default)
             'CONN_MAX_AGE': 300,            # Max database connection age
         }
