--- a/.github/workflows/k8s-cluster-cleanp.yml
+++ b/.github/workflows/k8s-cluster-cleanp.yml
@@ -34,4 +34,4 @@ jobs:
           export ENV_NAME=${{ github.event.inputs.environment }}
           source venv/bin/activate
           ansible-playbook -i ./clusters/$ENV_NAME/hosts.yml ./ansible/cluster-cleanup-pb.yml \
-              --become -e "ansible_password=${{ secrets.AHEAD_SSH_PASS }}"
+              -e "ansible_password=${{ secrets.SSH_PASS }}" -e "ansible_become_pass=${{ secrets.SSH_PASS }}"
