--- a/apps/wikijs/values-prod.yml
+++ b/apps/wikijs/values-prod.yml
@@ -5,6 +5,7 @@ postgresql:
   enabled: true
   replication:
     enabled: false
+  existingSecret: wikijs-prod-secrets
   persistence:
     enabled: true
     storageClass: rook-cephfs-retain
