--- a/apps/wikijs/overlays/prod/external-secrets.yml
+++ b/apps/wikijs/overlays/prod/external-secrets.yml
@@ -12,7 +12,7 @@ spec:
     name: wikijs-prod-secrets           # Name of the Kubernetes secret to create
     creationPolicy: Owner            # Replace or update the secret
   data:
-    - secretKey: postgres-password       # Key for Postgres 'postgres' user in the K8s secret
+    - secretKey: postgresql-password     # Key for Postgres 'postgres' user in the K8s secret
       remoteRef:
         key: secret/data/wikijs    # Path in Vault (adjust based on your setup)
         property: postgres-pass      # Key in the Vault secret
