--- a/apps/wikijs/overlays/prod/cluster-secret-store.yml
+++ b/apps/wikijs/overlays/prod/cluster-secret-store.yml
@@ -2,7 +2,7 @@ apiVersion: external-secrets.io/v1
 kind: ClusterSecretStore
 metadata:
   name: vault-backend-wikijs-prod
-  namespace: wikijs-prod
+  namespace: wiki-js-prod
 spec:
   provider:
     vault:
