--- a/apps/wikijs/overlays/prod/external-secrets.yml
+++ b/apps/wikijs/overlays/prod/external-secrets.yml
@@ -2,7 +2,7 @@ apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: wikijs-prod-secrets
-  namespace: wikijs-prod
+  namespace: wiki-js-prod
 spec:
   refreshInterval: "1h" # Refresh every hour
   secretStoreRef:
