--- a/apps/ollama/overlays/llama3.2-3b-dev/redis-pvc.yml
+++ b/apps/ollama/overlays/llama3.2-3b-dev/redis-pvc.yml
@@ -11,4 +11,4 @@ spec:
   resources:
     requests:
       storage: 1Gi
-  storageClassName: rook-cephfs-c-delete
+  storageClassName: rook-cephfs-delete
