--- a/apps/clabernetes/topologies/c9s-arista-clos01/kustomization.yml
+++ b/apps/clabernetes/topologies/c9s-arista-clos01/kustomization.yml
@@ -1,6 +1,7 @@
 resources:
   - topology.yml
   - external-secret.yml
+  - cluster-secret-store.yml
   - dc1-spine1-startup-config.yml
   - dc1-spine2-startup-config.yml
   - dc1-leaf1a-startup-config.yml
