--- a/apps/metallb/overlays/prod/ip-address-pool.yml
+++ b/apps/metallb/overlays/prod/ip-address-pool.yml
@@ -6,4 +6,4 @@ metadata:
 spec:
   addresses:
   - 192.168.101.161/32
-  - 192.168.101.170 - 192.168.101.174
+  - 192.168.101.226 - 192.168.101.254    # Clabernetes Pool
