--- a/apps/clabernetes/topologies/c9s-arista-clos01/external-secret.yml
+++ b/apps/clabernetes/topologies/c9s-arista-clos01/external-secret.yml
@@ -25,17 +25,17 @@ spec:
   data:
     - secretKey: username
       remoteRef:
-        key: "secret/data/leo-github"   # Adjust if your Vault KV engine uses a different path (e.g., KV v2)
+        key: "secret/data/my-github"   # Adjust if your Vault KV engine uses a different path (e.g., KV v2)
         property: username
     - secretKey: pat
       remoteRef:
-        key: "secret/data/leo-github"
+        key: "secret/data/my-github"
         property: pat
     - secretKey: email
       remoteRef:
-        key: "secret/data/leo-github"
+        key: "secret/data/my-github"
         property: email
     - secretKey: base64
       remoteRef:
-        key: "secret/data/leo-github"
+        key: "secret/data/my-github"
         property: base64
