--- a/clusters/prod/hosts.yml
+++ b/clusters/prod/hosts.yml
@@ -12,10 +12,10 @@ all:
       ansible_host: 192.168.101.159
       ip: 192.168.101.159
       access_ip: 192.168.101.159
-    # rocky9-prod-node4-ds:
-    #   ansible_host: 192.168.101.167
-    #   ip: 192.168.101.167
-    #   access_ip: 192.168.101.167
+    rocky9-prod-node4-sc:
+      ansible_host: 192.168.101.167
+      ip: 192.168.101.167
+      access_ip: 192.168.101.167
     rocky9-prod-node5-un:
       ansible_host: 192.168.104.168
       ip: 192.168.104.168
@@ -33,7 +33,7 @@ all:
         rocky9-prod-node1:
         rocky9-prod-node2:
         rocky9-prod-node3:
-        #rocky9-prod-node4-ds:
+        rocky9-prod-node4-sc:
         rocky9-prod-node5-un:
             
     etcd:
