--- a/apps/openwebui/overlays/multi-model-dev/ingress-route.yml
+++ b/apps/openwebui/overlays/multi-model-dev/ingress-route.yml
@@ -14,3 +14,5 @@
        services:
          - name: open-webui  # <-- Replace with your service name
            port: 80
+   tls:
+     secretName: prod-apps-certificate-secret
