--- a/apps/ollama/overlays/multi-model-dev/service.yml
+++ b/apps/ollama/overlays/multi-model-dev/service.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ollama-multi-model-service
-  namespace: ollama-multi-model-dev
+  namespace: ollama-multi-model-prod
   labels:
     app: ollama-multi-model
 spec:
