--- a/helm-charts/slurpit/values.yaml
+++ b/helm-charts/slurpit/values.yaml
@@ -195,6 +195,8 @@ warehouse:
 
   service:
     type: ClusterIP
-    port: 50051
-    name: http
+    - port: 80
+      name: http
+    - port: 50051
+      name: grpc
 
