--- a/helm-charts/slurpit/values.yaml
+++ b/helm-charts/slurpit/values.yaml
@@ -195,8 +195,13 @@ warehouse:
 
   service:
     type: ClusterIP
-    - port: 80
-      name: http
-    - port: 50051
-      name: grpc
+    ports:
+    - name: http
+      port: 80
+      targetPort: 80
+      protocol: TCP
+    - name: grpc
+      port: 50051
+      targetPort: 50051
+      protocol: TCP
 
