--- a/helm-charts/slurpit/values.yaml
+++ b/helm-charts/slurpit/values.yaml
@@ -193,15 +193,15 @@ warehouse:
   #       claimName: slurpit-pvc
   restartPolicy: Always
 
-  service:
-    type: ClusterIP
-    ports:
-    - name: http
-      port: 80
-      targetPort: 80
-      protocol: TCP
-    - name: grpc
-      port: 50051
-      targetPort: 50051
-      protocol: TCP
+  # service:
+  #   type: ClusterIP
+  #   ports:
+  #   - name: http
+  #     port: 80
+  #     targetPort: 80
+  #     protocol: TCP
+  #   - name: grpc
+  #     port: 50051
+  #     targetPort: 50051
+  #     protocol: TCP
 
