--- a/apps/slurpit/overlays/prod/ingress-route.yml
+++ b/apps/slurpit/overlays/prod/ingress-route.yml
@@ -7,12 +7,13 @@
    namespace: slurpit-prod  # <-- Replace with your namespace
  spec:
    entryPoints:
+     - web
      - websecure
    routes:
      - match: Host(`slurpit-prod.home.nerdylyonsden.io`)  # <-- Replace with your FQDN
        kind: Rule
        services:
          - name: slurpit-portal-service  # <-- Replace with your service name
-           port: 80
+           port: 443
    tls:
      secretName: prod-apps-certificate-secret
