--- a/helm-charts/slurpit/templates/portal-deployment.yaml
+++ b/helm-charts/slurpit/templates/portal-deployment.yaml
@@ -31,7 +31,7 @@ spec:
           {{- end }}
           ports:
             - containerPort: {{ .Values.portal.ports.containerPort }}
-              name: http
+              name: https
           {{- with .Values.portal.volumeMounts }}
           volumeMounts:
             {{- toYaml . | nindent 12 }}
