--- a/apps/slurpit/overlays/prod/mw-forward-headers.yml
+++ b/apps/slurpit/overlays/prod/mw-forward-headers.yml
@@ -7,4 +7,5 @@ spec:
   headers:
     customRequestHeaders:
       X-Forwarded-Proto: "https"
+      X-Forwarded-Host:  "slurpit-prod.home.nerdylyonsden.io"
 
