--- a/apps/slurpit/overlays/prod/ingress-route.yml
+++ b/apps/slurpit/overlays/prod/ingress-route.yml
@@ -17,6 +17,7 @@
            passHostHeader: true
        middlewares:
         - name: forward-headers
+        - name: csp-upgrade
    
    tls:
      secretName: prod-apps-certificate-secret
