--- a/apps/clabernetes/topologies/c9s-load-balance-test/topology.yml
+++ b/apps/clabernetes/topologies/c9s-load-balance-test/topology.yml
@@ -29,7 +29,7 @@ spec:
 
           mgmt:
             network: custom_mgmt                # management network name
-            ipv4-subnet: 192.168.101.168/29  # ipv4 range
+            ipv4-subnet: 192.168.101.224/28  # ipv4 range
           
           topology:
             kinds:
@@ -50,6 +50,7 @@ spec:
               node-2:
                   kind: paloalto_panos
                   image: ghcr.io/leothelyon17/kubernetes-gitops-playground/pa-vm:11.0.0
+                  mgmt-ipv4: 192.168.101.230
               
 
             links:
