--- a/apps/clabernetes/topologies/c9s-load-balance-test/topology.yml
+++ b/apps/clabernetes/topologies/c9s-load-balance-test/topology.yml
@@ -6,7 +6,12 @@ metadata:
 spec:
   imagePull:
     dockerConfig: ghcr-secret
+    expose:
+      useNodeMgmtIpv4Address: True
   deployment:
+    scheduling:
+      nodeSelector:
+        clabernetes-nodes: "true"
     persistence:
       claimSize: "1Gi"
       enabled: true
