--- a/apps/nautobot/values-prod.yml
+++ b/apps/nautobot/values-prod.yml
@@ -81,6 +81,9 @@ celery:
     - name: shared-volume
       mountPath: /tmp
 
+serviceAccount:
+  automountServiceAccountToken: true
+
 postgresql:
   primary:
     persistence:
