--- a/images/nautobot/dev/requirements.txt
+++ b/images/nautobot/dev/requirements.txt
@@ -7,3 +7,4 @@ nautobot-secrets-providers[hashicorp]==3.2.0
 nautobot-bgp-models==2.3.0
 nautobot-firewall-models==2.2.1
 slurpit_nautobot==1.0.15
+netutils==1.14.1
