--- a/apps/nautobot/overlays/prod/kustomization.yml
+++ b/apps/nautobot/overlays/prod/kustomization.yml
@@ -1,6 +1,6 @@
 resources:
   - cluster-secret-store.yml
   - external-secrets.yml
-  #- external-secret-repo.yml
+  - external-secrets-repo.yml
   - external-secret-superuser.yml
   - ingress-route.yml
