--- a/apps/nautobot/overlays/prod/external-secrets-repo.yml
+++ b/apps/nautobot/overlays/prod/external-secrets-repo.yml
@@ -6,7 +6,7 @@ metadata:
 spec:
   refreshInterval: "1h"  # How often to sync the secret
   secretStoreRef:
-    name: vault-backend-nautobot-prod
+    name: vault-backend
     kind: ClusterSecretStore
   target:
     name: net-automation-k8s-repo-credentials  # Name of the Kubernetes Secret
