--- a/images/nautobot/dev/Dockerfile
+++ b/images/nautobot/dev/Dockerfile
@@ -39,7 +39,7 @@ COPY requirements.txt /tmp/
 
 RUN pip install -r /tmp/requirements.txt
 
-COPY /command_mappers/paloalto_panos.yml /opt/nautobot/lib64/python${PYTHON_VER}/site-packages/nautobot_device_onboarding/command_mappers/
+COPY /command_mappers/paloalto_panos.yml /usr/local/lib/python3.11/site-packages/nautobot_device_onboarding/command_mappers/
 
 # -------------------------------------------------------------------------------------
 # Build Apps in plugins folder
