--- a/images/nautobot/dev/command_mappers/paloalto_panos.yml
+++ b/images/nautobot/dev/command_mappers/paloalto_panos.yml
@@ -11,7 +11,7 @@ sync_devices:
       - command: "show system info"
         parser: "raw"
         jpath: "raw"
-        post_processor: "Palo Alto Networks"
+        post_processor: "{{ 'Palo Alto Networks' }}"
   serial:
     commands:
       - command: "show system info"
