--- a/images/nautobot/dev/requirements.txt
+++ b/images/nautobot/dev/requirements.txt
@@ -8,4 +8,5 @@ nautobot-bgp-models==2.3.0
 nautobot-firewall-models==2.2.1
 slurpit_nautobot==1.0.15
 netutils==1.14.1
+napalm==5.1.0
 napalm-panos==0.7.0
