--- a/images/nautobot/dev/Dockerfile
+++ b/images/nautobot/dev/Dockerfile
@@ -40,6 +40,7 @@ COPY requirements.txt /tmp/
 RUN pip install -r /tmp/requirements.txt
 
 COPY /command_mappers/paloalto_panos.yml /usr/local/lib/python3.11/site-packages/nautobot_device_onboarding/command_mappers/
+COPY /parsers/ttp/paloalto_panos_show_system_info.ttp /usr/local/lib/python3.11/site-packages/nautobot_device_onboarding/parsers/ttp/
 
 # -------------------------------------------------------------------------------------
 # Build Apps in plugins folder
