--- a/images/nautobot/dev/command_mappers/paloalto_panos.yml
+++ b/images/nautobot/dev/command_mappers/paloalto_panos.yml
@@ -17,19 +17,19 @@ sync_devices:
       - command: "show system info"
         parser: "ttp"
         jpath: "[*].model"
-        post_processor: "{{ 'PA-VM' }}"
+        post_processor: "{{ obj[0] }}"
   mask_length:
     commands:
       - command: "show system info"
         parser: "ttp"
         jpath: "[*].netmask"
         post_processor: "{{ obj[0] | netmask_to_cidr }}"
-  # manufacturer:
-  #   commands:
-  #     - command: "show system info"
-  #       parser: "raw"
-  #       jpath: "raw"
-  #       post_processor: "{{ 'Palo Alto Networks' }}"
+  manufacturer:
+    commands:
+      - command: "show system info"
+        parser: "raw"
+        jpath: "raw"
+        post_processor: "{{ 'Palo Alto Networks' }}"
   mgmt_interface:
     commands:
       - command: "show interface management | match Name"
