--- a/images/nautobot/dev/command_mappers/paloalto_panos.yml
+++ b/images/nautobot/dev/command_mappers/paloalto_panos.yml
@@ -1,17 +1,17 @@
 ---
 sync_devices:
-  hostname:
-    commands:
-      - command: "show system info"
-        parser: "ttp"
-        jpath: "[*].hostname"
-        post_processor: "{{ obj[0] }}"
-  serial:
-    commands:
-      - command: "show system info"
-        parser: "ttp"
-        jpath: "[*].serial"
-        post_processor: "{{ obj[0] }}"
+  # hostname:
+  #   commands:
+  #     - command: "show system info"
+  #       parser: "ttp"
+  #       jpath: "[*].hostname"
+  #       post_processor: "{{ obj[0] }}"
+  # serial:
+  #   commands:
+  #     - command: "show system info"
+  #       parser: "ttp"
+  #       jpath: "[*].serial"
+  #       post_processor: "{{ obj[0] }}"
   device_type:
     commands:
       - command: "show system info"
@@ -24,12 +24,12 @@ sync_devices:
         parser: "ttp"
         jpath: "[*].netmask"
         post_processor: "{{ obj[0] | netmask_to_cidr }}"
-  manufacturer:
-    commands:
-      - command: "show system info"
-        parser: "raw"
-        jpath: "raw"
-        post_processor: "{{ 'Palo Alto Networks' }}"
+  # manufacturer:
+  #   commands:
+  #     - command: "show system info"
+  #       parser: "raw"
+  #       jpath: "raw"
+  #       post_processor: "{{ 'Palo Alto Networks' }}"
   mgmt_interface:
     commands:
       - command: "show interface management | match Name"
