--- a/images/nautobot/dev/command_mappers/paloalto_panos.yml
+++ b/images/nautobot/dev/command_mappers/paloalto_panos.yml
@@ -6,12 +6,12 @@ sync_devices:
         parser: "ttp"
         jpath: "[*].hostname"
         post_processor: "{{ obj[0] }}"
-  # serial:
-  #   commands:
-  #     - command: "show system info"
-  #       parser: "ttp"
-  #       jpath: "[*].serial"
-  #       post_processor: "{{ obj[0] }}"
+  serial:
+    commands:
+      - command: "show system info"
+        parser: "ttp"
+        jpath: "[*].serial"
+        post_processor: "{{ obj[0] }}"
   device_type:
     commands:
       - command: "show system info"
