--- a/apps/metallb/overlays/prod/ip-address-pool.yml
+++ b/apps/metallb/overlays/prod/ip-address-pool.yml
@@ -5,5 +5,5 @@ metadata:
   namespace: metallb-prod
 spec:
   addresses:
-  - 192.168.101.161/32
+  - 192.168.101.161/32    # Traefik IP
   - 192.168.101.224/28    # Clabernetes Pool
