--- a/apps/ollama/overlays/multi-model-dev/deployment.yml
+++ b/apps/ollama/overlays/multi-model-dev/deployment.yml
@@ -32,6 +32,7 @@ spec:
               sleep 2
               ollama pull mistral
               ollama pull command-r7b
+              ollama pull gpt-oss:20b
               tail -f /dev/null
           volumeMounts:
             - name: model-cache
