--- a/apps/nautobot/overlays/prod/cluster-secret-store.yml
+++ b/apps/nautobot/overlays/prod/cluster-secret-store.yml
@@ -17,3 +17,6 @@ spec:
         kubernetes:
           mountPath: "kubernetes"
           role: "nautobot"
+          serviceAccountRef:
+            name: nautobot-prod
+            namespace: nautobot-prod
