--- a/images/nautobot/dev/Dockerfile
+++ b/images/nautobot/dev/Dockerfile
@@ -1,4 +1,4 @@
-ARG NAUTOBOT_VERSION=2.4.2
+#ARG NAUTOBOT_VERSION=2.4.2
 ARG PYTHON_VER=3.11
 ARG APPS
 FROM ghcr.io/nautobot/nautobot:${NAUTOBOT_VERSION}-py${PYTHON_VER} as nautobot-base
